# iu9-compilers

./: .gitattributes  .gitignore  README.md
lab1/: hello.pas  pcom2.pas  pcom3.pas  report.md
lab1-1/: hello.pas  pcom2.pas
lab1-2/: CMakeLists.txt  report.md
lab1-2/lib/lexer/: CMakeLists.txt
lab1-2/lib/lexer/include/: compiler.hpp  message.hpp  token.hpp
lab1-2/lib/lexer/src/: compiler.cpp  position.cpp  scanner.cpp  token.cpp
lab1-2/src/: main.cpp
lab1-3/: CMakeLists.txt  report.md
lab1-3/data/: test.txt
lab1-3/src/: main.cpp
lab1-4/: CMakeLists.txt  report.md
lab1-4/data/: test.txt
lab1-4/docs/: deterministic.dot
lab1-4/src/: main.cpp
lab1-5/: CMakeLists.txt  compiler.cpp  fragment.cpp  lab1-5.cc  main.cpp  position.cpp  position.hpp  report.md  scanner.hpp  scanner.l  token.hpp
lab1-5/src/: CMakeLists.txt  fragment.cpp  message.cpp  message.hpp  position.hpp  token.cpp  token.hpp
lab1_2/: CMakeLists.txt
lab1_2/data/: test.txt
lab1_2/docs/: grammar.abnf
lab1_2/src/: main.cpp
lab1_3/: CMakeLists.txt
lab1_3/data/: test.txt
lab1_3/src/: main.cpp
lab1_4/: CMakeLists.txt
lab1_4/docs/: deterministic.dot  grammar.abnf  nondeterministic.dot
lab1_4/src/: main.cpp
lab2/: go.mod  report.md
lab2-1/: go.mod
lab2-2/: main.py  report.md
lab2-2/docs/: abstract_grammar.txt  concrete.gram  concrete_grammar.txt
lab2-2/report/: report.md
lab2-2/specs/: abstract_grammar.txt  concrete_grammar.txt
lab2-2/tests/: program.lang
lab2-3/docs/: abstract_grammar.txt  concrete_grammar.txt  first_follow.txt  grammar.txt  lexical_structure.txt  table.txt  table_split.txt
lab2-3/report/: report.md
lab2-3/src/: CMakeLists.txt  compiler.cc  compiler.h  compiler.hpp  fragment.cc  fragment.hpp  main.cc  main.cpp  message.cc  message.cpp  message.h  message.hpp  node.cc  node.h  parser.cc  parser.h  position.cc  scanner.h  scanner.hpp  scanner.l  table.cc  table.h  token.cc  token.cpp  token.h  token.hpp
lab2-3/tests/: missing_alternative.txt
lab2-4/docs/: abstract_grammar.txt  concrete_grammar.txt  lexical_structure.txt
lab2-4/report/: report.md
lab2-4/specs/: abstract_grammar.txt  concrete_grammar.txt  lexical_structure.txt
lab2-4/src/: CMakeLists.txt  compiler.cc  compiler.h  fragment.h  main.cc  node.cc  node.h  parser.cc  parser.h  scanner.h  scanner.l  token.cc  token.h
lab2-4/tests/: program.txt
lab2_1/: go.mod  report.md
lab3-1/apps/: README.md
lab3-1/apps/generator/src/: CMakeLists.txt  main.cc
lab3-1/apps/generator/src/lexer/: scanner.h  scanner.l  token.cc  token.h
lab3-1/apps/generator/src/parser/: CMakeLists.txt  analyzer_table.cc  analyzer_table.h  node.h  parser.cc  parser.h  symbol.cc
lab3-1/apps/generator/src/parser/ast/: analyzer_table.cc  analyzer_table_generator.cc  analyzer_table_generator.h  ast.cc  ast.h  dt_to_ast.cc  dt_to_ast.h  first_follow.cc  first_follow.h
lab3-1/apps/generator/src/semantics/: CMakeLists.txt  analyzer_table_generator.cc  analyzer_table_generator.h  ast.cc  ast.h  dt_to_ast.cc  dt_to_ast.h  first_follow.cc  first_follow.h
lab3-1/examples/: self-describing_grammar.txt
lab3-1/report/: report.md
lab3-1/src/: CMakeLists.txt  ast.cc  ast.h  compiler.h  main.cc  node.cc  node.h  parser.cc  parser.h  scanner.h
lab3-1/src/lexer/: CMakeLists.txt  fragment.cc  fragment.h  position.cc  position.h  scanner.h  scanner.l  token.cc  token.h
lab3-1/src/parser/: node.cc  node.h  parser.cc  parser.h
lab3-1/src/parser/ast/: CMakeLists.txt  analyzer_table.cc  analyzer_table.h  analyzer_table_generator.cc  analyzer_table_generator.h  ast.cc  ast.h  dt_to_ast.cc  dt_to_ast.h  first_follow.cc  first_follow.h  first_set_generator.cc  first_set_generator.h  follow_set_generator.cc  follow_set_generator.h  symbol_table.cc  symbol_table.h  table.h  validator.cc  validator.h  visitor.h
lab3-2/examples/: example.txt
lab3-2/src/: CMakeLists.txt  ast.cc  ast.h  driver.cc  driver.h  formatter.cc  formatter.h  ident_table.cc  ident_table.h  main.cc  parser.y  scanner.h  scanner.l  visitor.h
notes/: notes.tex
(+83 files in other folders)
